[package]
name = "vsv"
version = "2.0.0"
description = "Runit service manager CLI"
edition = "2021"
repository = "https://github.com/bahamas10/rust-vsv"
license = "MIT"
exclude = ["/assets"]
keywords = ["runit", "void", "void-linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
dirs = "6.0.0"
libc = "0.2.119"
rayon = "1.5.1"
yansi = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.4"
